feat: 新增算法设计哲学博文并优化数据结构博文
- 新增《算法设计哲学：从暴力美学到智能决策的思维跃迁》博文，涵盖分治、DP、贪心、回溯等核心思想及工程实践。
- 完善《数据结构与算法全景》博文中关于哈希冲突解法的描述，增加链地址法和开放寻址法的详细对比与示例。

--- a/source/_posts/数据结构与算法全景：从底层原理到工程实战.md
+++ b/source/_posts/数据结构与算法全景：从底层原理到工程实战.md
@@ -50,7 +50,9 @@ categories:
 *   **痛点**：如何在大规模数据中实现 O(1) 查找？
 *   **机制**：Hash 函数映射 Key 到数组下标。
 *   **挑战**：Hash 冲突。
-    *   *解法*：链地址法（拉链法）、开放寻址法。
+    *   *解法*：
+        *   **链地址法 (Separate Chaining)**：“房间不够，挂个链表” —— 冲突时将元素串成链表挂在该位置下（如 Java `HashMap`）。
+        *   **开放寻址法 (Open Addressing)**：“房间有人，找下一个” —— 冲突时按规则（如线性探测）找下一空位（如 `ThreadLocal`）。
 *   **工程实战**：
     *   **Java HashMap**：数组 + 链表 + 红黑树（JDK 8+）。当链表长度 > 8 时转红黑树，防 DoS 攻击。
     *   **ThreadLocal**：使用开放寻址法解决冲突（线性探测），因为 ThreadLocalMap 通常较小且需快速清理。
