feat: 添加多篇技术文章与相关图片资源
添加了关于操作系统设计、Java演进、AI Agent通信、Transformer架构、Next.js全栈开发、数据结构与算法、计算机硬件原理、计算机网络等主题的技术文章。每篇文章包含详细的Markdown内容和相关图片资源，涵盖了底层原理、工程实践和设计哲学等多个维度。这些资源将用于技术博客的内容建设。

--- a/source/_posts/tech/计算机网络全景：七层模型与数据流转的底层逻辑.md
+++ b/source/_posts/tech/计算机网络全景：七层模型与数据流转的底层逻辑.md
@@ -104,6 +104,19 @@ categories:
 *   **机制**：
     *   **C/S 架构**：客户端-服务器模式。
     *   **P2P 架构**：对等网络模式（如 BitTorrent）。
+    *   **HTTPS 握手：安全通信的奠基**
+        一次 HTTPS 请求，在 TCP 三次握手之上，还需进行 TLS/SSL 握手，确保信道安全：
+        1.  **客户端问候 (Client Hello)**：客户端向服务端发送支持的加密套件列表、一个随机数 `ClientRandom`。
+        2.  **服务端响应 (Server Hello)**：服务端选定一个加密套件，返回自己的数字证书（内含公钥）、另一个随机数 `ServerRandom`。
+        3.  **客户端验证与密钥交换**：
+            *   客户端验证证书的合法性（由受信任的 CA 签发）。
+            *   生成第三个随机数 `PreMasterSecret`，用服务端的公钥加密后发送给服务端。
+        4.  **服务端解密与会话密钥生成**：
+            *   服务端用自己的私钥解密，得到 `PreMasterSecret`。
+            *   至此，双方都拥有 `ClientRandom`、`ServerRandom`、`PreMasterSecret`，各自独立计算出完全相同的**会话密钥 (Session Key)**。
+                *   **如何做到？** 这个过程依赖一个标准化的**伪随机函数 (PRF)**，可以理解为一个公开的“搅拌机”。双方都将三个随机数作为原料，按 `PRF(PreMasterSecret, "master secret", ClientRandom + ServerRandom)` 的公式进行“搅拌”，生成一个统一的“主密钥” (`Master Secret`)。
+                *   再用类似的 PRF 过程，从主密钥派生出真正用于加密HTTP报文的**会话密钥**、以及用于校验数据完整性的**MAC密钥**。
+        5.  **握手完成**：双方互发一条用会话密钥加密的 “Finished” 消息，验证密钥交换成功。此后所有 HTTP 报文都用此对称密钥加密。
 
 ---
 
