docs(历史文章): 重构中国正史介绍格式，使用统一符号标记
将各朝代正史介绍中的"风格特色"和"优缺点"合并为"特色与优劣"部分，使用□●○符号统一标记，提高可读性和一致性

--- a/source/_posts/history/二十四史全景：从史记到清史稿的中国史学传统.md
+++ b/source/_posts/history/二十四史全景：从史记到清史稿的中国史学传统.md
@@ -46,26 +46,23 @@ categories:
 - **世家**30篇：诸侯及重要人物
 - **列传**70篇：各阶层人物传记
 
-### 风格特色
-- **文学性与史学性并重**：鲁迅誉为"史家之绝唱，无韵之离骚"
-- **人物刻画生动**：项羽、韩信、荆轲等人物形象跃然纸上
-- **叙事跌宕起伏**：鸿门宴、霸王别姬等段落成为千古名篇
-- **情感充沛**：寄托作者的身世之感与价值判断
-
-### 优缺点
-**优点**：
-- 开创纪传体史书体例，影响后世两千年
-- 史料丰富，兼采百家，保存大量珍贵文献
-- 文学价值极高，叙事艺术登峰造极
-- 思想独立，不盲从官方意识形态
-
-**缺点**：
-- 部分内容采信传说，史实考证不够严谨
-- 对汉武帝批评过于直白，引发争议
-- 十篇有目无书，后人补作
+### 特色与优劣
+□ 首创纪传体史书体例，分为本纪、表、书、世家、列传五体
+□ 文学性与史学性并重
+□ 人物刻画生动，叙事跌宕起伏
+□ 情感充沛，寄托作者的身世之感与价值判断
+□ 将项羽列入本纪、陈涉列入世家
+● 开创纪传体史书体例，影响后世两千年
+● 史料丰富，兼采百家，保存大量珍贵文献
+● 文学价值极高，鲁迅誉为"史家之绝唱，无韵之离骚"
+● 思想独立，不盲从官方意识形态
+● 打破以成败论英雄的传统
+○ 部分内容采信传说，史实考证不够严谨
+○ 对汉武帝批评过于直白，引发争议
+○ 十篇有目无书，后人补作
 
 ### 背后的故事
-司马迁受宫刑后，曾一度想自杀。他在《报任安书》中写道："人固有一死，或重于泰山，或轻于鸿毛。"正是这种对生命价值的深刻思考，支撑他完成了这部不朽之作。他将项羽列入本纪、陈涉列入世家，打破了以成败论英雄的传统，体现了卓越的史识。
+司马迁受宫刑后，曾一度想自杀。他在《报任安书》中写道："人固有一死，或重于泰山，或轻于鸿毛。"正是这种对生命价值的深刻思考，支撑他完成了这部不朽之作。
 
 ### 最佳校注版本
 - **学术版**：中华书局点校本（顾颉刚等点校），1959年
@@ -95,23 +92,18 @@ categories:
 - **列传**70篇
 - 取消"世家"，诸侯王公皆入列传
 
-### 风格特色
-- **断代为史**：首创断代史体例，此后正史皆仿此例
-- **文风典雅**：语言整饬，多用古字古义
-- **志书完备**：《艺文志》《地理志》《食货志》等为后世典范
-- **叙事严谨**：史料取舍审慎，考证详密
-
-### 优缺点
-**优点**：
-- 首创断代史，确立正史基本范式
-- 十志内容丰富，保存大量制度史料
-- 文字精炼，叙事条理清晰
-- 《艺文志》为现存最早的图书目录
-
-**缺点**：
-- 思想较《史记》保守，维护正统
-- 文学性不及《史记》
-- 对王莽评价有失公允
+### 特色与优劣
+□ 首创断代史体例
+□ 文风典雅，语言整饬，多用古字古义
+□ 将"书"改称为"志"，成为后世正史定例
+□ 叙事严谨，史料取舍审慎
+● 确立正史基本范式，此后正史皆仿此例
+● 十志内容丰富，保存大量制度史料
+● 文字精炼，叙事条理清晰
+● 《艺文志》为现存最早的图书目录
+○ 思想较《史记》保守，维护正统
+○ 文学性不及《史记》
+○ 对王莽评价有失公允
 
 ### 背后的故事
 班固曾因私撰国史入狱，其弟班超上书辩白，明帝阅其书稿后大为赞赏，不仅释放班固，还任命他为兰台令史，继续修史。班固后因窦宪案牵连死于狱中，八表和《天文志》由其妹班昭完成。班昭是中国历史上第一位女史学家。
@@ -142,22 +134,17 @@ categories:
 - **列传**80篇
 - **志**30篇（司马彪《续汉书》志，后人合入）
 
-### 风格特色
-- **论赞精辟**：每篇传记后的"论""赞"见解独到
-- **类传创新**：《党锢列传》《宦者列传》《文苑列传》等反映时代特色
-- **叙事简洁**：文字凝练，叙事生动
-- **人物刻画细腻**：严光、范滂等人物形象鲜明
-
-### 优缺点
-**优点**：
-- 文学价值高，叙事艺术精湛
-- 论赞部分思想深刻，史识卓越
-- 类传设置合理，反映东汉政治社会特点
-- 与《史记》《汉书》《三国志》并称"前四史"
-
-**缺点**：
-- 无表、志（后以司马彪志补入）
-- 部分内容有褒贬失当之处
+### 特色与优劣
+□ 论赞精辟，每篇传记后的"论""赞"见解独到
+□ 类传创新，《党锢列传》《宦者列传》《文苑列传》等反映时代特色
+□ 叙事简洁，文字凝练
+□ 创设《皇后纪》，突破旧例
+● 文学价值高，叙事艺术精湛
+● 论赞部分思想深刻，史识卓越
+● 类传设置合理，反映东汉政治社会特点
+● 与《史记》《汉书》《三国志》并称"前四史"
+○ 无表、志（后以司马彪志补入）
+○ 部分内容有褒贬失当之处
 
 ### 背后的故事
 范晔才华横溢却恃才傲物，参与谋反被杀。他在狱中写下《与诸甥侄书》，自评《后汉书》"精意深旨"，认为自古文章无出其右。其书因未完成而缺志，后人将司马彪《续汉书》的志补入，方成完璧。
@@ -188,21 +175,17 @@ categories:
 - **吴书**20卷
 - 以魏为正统，蜀、吴称传不称纪
 
-### 风格特色
-- **叙事简练**：文字精洁，叙事有条理
-- **评价公允**：虽以魏为正统，但对蜀汉人物评价颇高
-- **取材审慎**：史料取舍严谨，不信怪力乱神
-
-### 优缺点
-**优点**：
-- 文字简练，叙事清晰
-- 史料取舍审慎，可信度高
-- 裴松之注补充大量史料，价值倍增
-
-**缺点**：
-- 过于简略，细节不足
-- 以魏为正统，体例有失平衡
-- 蜀汉史料较少
+### 特色与优劣
+□ 叙事简练，文字精洁
+□ 分国叙事，魏、蜀、吴各自成书
+□ 以魏为正统，蜀、吴称传不称纪
+□ 裴松之注引用书目达200余种
+● 评价公允，虽以魏为正统，但对蜀汉人物评价颇高
+● 史料取舍审慎，不信怪力乱神，可信度高
+● 裴松之注补充大量史料，价值倍增
+○ 过于简略，细节不足
+○ 体例有失平衡
+○ 蜀汉史料较少
 
 ### 背后的故事
 陈寿在蜀汉时因不肯阿附宦官黄皓，屡遭贬黜。入晋后，张华赏识其才华，推荐他修史。陈寿死后，朝廷派人到他家抄录《三国志》，藏于洛阳。裴松之受宋文帝之命为《三国志》作注，引用书目达200余种，大大丰富了原书内容。
@@ -233,22 +216,18 @@ categories:
 - **列传**70篇
 - **载记**30篇（记十六国史事，创新体例）
 
-### 风格特色
-- **御撰性质**：官方组织，集体编纂
-- **载记创新**：专记十六国，体例独特
-- **文学性强**：引用大量文学作品
-- **太宗亲撰**：宣帝、武帝、陆机、王羲之四论为太宗亲笔
-
-### 优缺点
-**优点**：
-- 首创"载记"体例，保存十六国史料
-- 志书完备，制度记载详实
-- 文学性强，可读性高
-
-**缺点**：
-- 集体编纂，风格不统一
-- 部分内容采信小说野史
-- 对晋朝批评过于严厉
+### 特色与优劣
+□ 御撰性质，官方组织，集体编纂
+□ 首创"载记"体例，专记十六国
+□ 引用大量文学作品
+□ 太宗亲撰宣帝、武帝、陆机、王羲之四论
+□ 修史人员达二十余人
+● 保存十六国史料
+● 志书完备，制度记载详实
+● 文学性强，可读性高
+○ 集体编纂，风格不统一
+○ 部分内容采信小说野史
+○ 对晋朝批评过于严厉
 
 ### 背后的故事
 唐太宗非常重视此书，亲自撰写四篇史论。他在《陆机传论》中称赞陆机"文藻宏丽，独步当时"，在《王羲之传论》中评价书法"尽善尽美，其惟王逸少乎"。
@@ -277,20 +256,16 @@ categories:
 - **志**30篇
 - **列传**60篇
 
-### 风格特色
-- **志书详备**：《律历志》《礼志》《乐志》等保存大量制度史料
-- **叙事简洁**：文字精炼，条理清晰
-- **收录诏令奏议**：保存大量原始文献
-
-### 优缺点
-**优点**：
-- 志书内容丰富，史料价值高
-- 文字简洁，叙事清晰
-- 保存大量刘宋时期文献
-
-**缺点**：
-- 无表
-- 部分内容有回护
+### 特色与优劣
+□ 志书详备，《律历志》《礼志》《乐志》等保存大量制度史料
+□ 叙事简洁，文字精炼
+□ 收录诏令奏议，保存大量原始文献
+□ 作者为著名文学家，文采斐然
+● 志书内容丰富，史料价值高
+● 文字简洁，叙事清晰
+● 保存大量刘宋时期文献
+○ 无表
+○ 部分内容有回护
 
 ### 最佳校注版本
 - **学术版**：中华书局点校本，1974年
@@ -315,20 +290,15 @@ categories:
 - **志**11篇
 - **列传**40篇
 
-### 风格特色
-- **宗室修史**：以亲历者身份记录
-- **叙事简洁**：文字精炼
-- **类传设置合理**：《文学列传》《良政列传》等
-
-### 优缺点
-**优点**：
-- 作者为齐宗室，熟悉本朝史事
-- 文字简洁，叙事流畅
-- 保存南齐时期重要史料
-
-**缺点**：
-- 对齐朝有所回护
-- 志书较简略
+### 特色与优劣
+□ 宗室修史，以亲历者身份记录
+□ 叙事简洁，文字精炼
+□ 类传设置合理，《文学列传》《良政列传》等
+● 作者为齐宗室，熟悉本朝史事
+● 文字简洁，叙事流畅
+● 保存南齐时期重要史料
+○ 对齐朝有所回护
+○ 志书较简略
 
 ### 最佳校注版本
 - **学术版**：中华书局点校本，1972年
@@ -348,20 +318,15 @@ categories:
 
 **写作目的**：完成父亲遗愿，记录南朝后期历史。
 
-### 风格特色
-- **家学渊源**：父子两代修史
-- **叙事严谨**：史料取舍审慎
-- **文风朴实**：不尚华丽
-
-### 优缺点
-**优点**：
-- 史料可靠，叙事严谨
-- 保存南朝后期重要史料
-- 文字简洁，条理清晰
-
-**缺点**：
-- 志书缺如
-- 部分内容过于简略
+### 特色与优劣
+□ 家学渊源，父子两代修史
+□ 叙事严谨，史料取舍审慎
+□ 文风朴实，不尚华丽
+● 史料可靠，叙事严谨
+● 保存南朝后期重要史料
+● 文字简洁，条理清晰
+○ 志书缺如
+○ 部分内容过于简略
 
 ### 最佳校注版本
 - **学术版**：中华书局点校本，1973年
@@ -386,21 +351,16 @@ categories:
 - **列传**96篇
 - **志**20篇
 
-### 风格特色
-- **志书详备**：《官氏志》《释老志》为独创
-- **门阀色彩浓厚**：详记世族门第
-- **叙事详赡**：保存大量北魏史料
-
-### 优缺点
-**优点**：
-- 志书内容丰富，《释老志》为研究佛教道教重要史料
-- 保存大量北魏时期文献
-- 首创《官氏志》，记录鲜卑姓氏汉化
-
-**缺点**：
-- 对北齐有所回护
-- 曾因"秽史"之讥引发争议
-- 人物评价有失公允
+### 特色与优劣
+□ 首创《官氏志》，记录鲜卑姓氏汉化
+□ 首创《释老志》，记录佛道二教
+□ 门阀色彩浓厚，详记世族门第
+□ 叙事详赡
+● 志书内容丰富，《释老志》为研究佛教道教重要史料
+● 保存大量北魏时期文献
+○ 对北齐有所回护
+○ 曾因"秽史"之讥引发争议
+○ 人物评价有失公允
 
 ### 背后的故事
 魏收修《魏书》时，对人物评价引发争议。有人指责他"以爱憎为褒贬"，称其书为"秽史"。魏收辩称："何物小子，敢共魏收作色！举之则使上天，按之则使入地。"此书在当时引发激烈争论。
@@ -418,18 +378,16 @@ categories:
 - **卷数**：《北齐书》50卷，《周书》50卷
 - **记载范围**：北齐（550-577）、北周（557-581）
 
-### 风格特色
-- **李百药**：唐初著名文学家，文字优美
-- **令狐德棻**：唐初修史主持人，贡献卓著
+### 作者与写作目的
+李百药为唐初著名文学家；令狐德棻为唐初修史主持人，贡献卓著。
 
-### 优缺点
-**优点**：
-- 保存北朝后期重要史料
-- 文字简洁，叙事清晰
-
-**缺点**：
-- 原书有残缺，后人补修
-- 志书缺如
+### 特色与优劣
+□ 李百药文字优美，文学性强
+□ 令狐德棻主持唐初修史，贡献卓著
+● 保存北朝后期重要史料
+● 文字简洁，叙事清晰
+○ 原书有残缺，后人补修
+○ 志书缺如
 
 ### 最佳校注版本
 - **学术版**：中华书局点校本，1972-1973年
@@ -449,20 +407,16 @@ categories:
 
 **写作目的**：打通南北，展现南北朝全貌，为统一王朝提供历史借鉴。
 
-### 风格特色
-- **通史性质**：贯通南北朝各代
-- **删繁就简**：以南北朝各史为基础，删补调整
-- **南北对照**：便于比较南北政治文化
-
-### 优缺点
-**优点**：
-- 通史视野，便于整体把握南北朝
-- 删繁就简，可读性强
-- 补充了部分史料
-
-**缺点**：
-- 删削过多，部分史料丢失
-- 对原史有改动
+### 特色与优劣
+□ 通史性质，贯通南北朝各代
+□ 删繁就简，以南北朝各史为基础，删补调整
+□ 南北对照，便于比较南北政治文化
+□ 打破朝代界限
+● 通史视野，便于整体把握南北朝
+● 可读性强
+● 补充了部分史料
+○ 删削过多，部分史料丢失
+○ 对原史有改动
 
 ### 最佳校注版本
 - **学术版**：中华书局点校本，1975年
@@ -487,19 +441,15 @@ categories:
 - **志**30篇
 - **列传**50篇
 
-### 风格特色
-- **志书精良**：《经籍志》《地理志》等为后世典范
-- **史论深刻**：魏征所撰史论见解独到
-- **以史为鉴**：突出隋亡教训
-
-### 优缺点
-**优点**：
-- 志书内容丰富，学术价值高
-- 《经籍志》为现存第二部史志目录
-- 史论深刻，政治意义突出
-
-**缺点**：
-- 对隋炀帝批评过于严厉
+### 特色与优劣
+□ 志书精良，《经籍志》《地理志》等为后世典范
+□ 史论深刻，魏征所撰史论见解独到
+□ 以史为鉴，突出隋亡教训
+□ 志原为《五代史志》，记载梁、陈、齐、周、隋五代制度
+● 志书内容丰富，学术价值高
+● 《经籍志》为现存第二部史志目录
+● 史论深刻，政治意义突出
+○ 对隋炀帝批评过于严厉
 
 ### 背后的故事
 《隋书》志原为《五代史志》，记载梁、陈、齐、周、隋五代制度，后并入《隋书》。魏征在史论中深刻分析隋朝速亡原因，提出"水能载舟，亦能覆舟"的著名论断。
@@ -521,36 +471,26 @@ categories:
 
 **《新唐书》**：宋仁宗下诏重修，欧阳修、宋祁主持。因不满《旧唐书》繁冗，欲仿《春秋》笔法，重修唐史。
 
-### 风格特色
-**《旧唐书》**：
-- 史料丰富，保存大量唐代原始文献
-- 叙事详赡，但文字较繁冗
-- 史料价值高
+### 《旧唐书》特色与优劣
+□ 史料丰富，以唐代实录、国史为基础
+□ 叙事详赡
+● 保存大量唐代实录、国史原文
+● 史料价值高，是研究唐史的基础
+○ 文字繁冗，体例不够严谨
+○ 晚唐部分史料不足
 
-**《新唐书》**：
-- 文字精炼，叙事简洁
-- 增设《仪卫志》《选举志》《兵志》，创新体例
-- 表格详备，便于查检
-- 《宰相表》《方镇表》等极具价值
-
-### 优缺点
-**《旧唐书》优点**：
-- 保存大量唐代实录、国史原文
-- 史料价值高，是研究唐史的基础
-
-**《旧唐书》缺点**：
-- 文字繁冗，体例不够严谨
-- 晚唐部分史料不足
-
-**《新唐书》优点**：
-- 文字精炼，体例严谨
-- 志表完备，学术价值高
-- 删削得当，可读性强
-
-**《新唐书》缺点**：
-- 删削过多，部分史料丢失
-- 过于追求《春秋》笔法，有失客观
-- 对唐代政治有所曲解
+### 《新唐书》特色与优劣
+□ 文字精炼，叙事简洁
+□ 增设《仪卫志》《选举志》《兵志》，创新体例
+□ 表格详备，《宰相表》《方镇表》等便于查检
+□ 欧阳修与宋祁分工合作，风格各异
+□ 欲仿《春秋》笔法，追求简严
+● 体例严谨
+● 志表完备，学术价值高
+● 可读性强
+○ 删削过多，部分史料丢失
+○ 过于追求《春秋》笔法，有失客观
+○ 对唐代政治有所曲解
 
 ### 背后的故事
 欧阳修与宋祁分工合作，欧阳修撰纪、志、表，宋祁撰列传。二人风格不同，宋祁好用生僻字，欧阳修曾建议统一文风，宋祁不从。书成后，朝廷欲署"欧阳修等撰"，欧阳修认为宋祁功不可没，坚持并列二人之名。
@@ -573,30 +513,23 @@ categories:
 
 **《新五代史》**：欧阳修私撰，仿《春秋》笔法，欲明正统之辨。
 
-### 风格特色
-**《旧五代史》**：
-- 史料丰富，保存大量五代实录
-- 叙事详赡，体例仿《旧唐书》
+### 《旧五代史》特色与优劣
+□ 史料丰富，以五代实录为基础
+□ 叙事详赡，体例仿《旧唐书》
+□ 原书在明代散佚，今本为清代从《永乐大典》辑出
+● 保存大量原始文献，史料价值高
+○ 文字繁冗
 
-**《新五代史》**：
-- 文字精炼，仿《史记》体例
-- 强调正统观念，以梁为伪朝
-- 文学性强，叙事生动
-
-### 优缺点
-**《旧五代史》优点**：
-- 史料价值高，保存大量原始文献
-
-**《旧五代史》缺点**：
-- 文字繁冗
-
-**《新五代史》优点**：
-- 文学价值高，叙事精炼
-- 体例创新，有《家人传》《一行传》等
-
-**《新五代史》缺点**：
-- 史料不及《旧五代史》丰富
-- 正统观念过于强烈
+### 《新五代史》特色与优劣
+□ 文字精炼，仿《史记》体例
+□ 强调正统观念，以梁为伪朝
+□ 文学性强，叙事生动
+□ 体例创新，有《家人传》《一行传》等
+□ 欧阳修晚年私撰，寄托政治理想
+● 文学价值高，叙事精炼
+● 体例创新
+○ 史料不及《旧五代史》丰富
+○ 正统观念过于强烈
 
 ### 背后的故事
 《旧五代史》原书在明代散佚，今本为清代从《永乐大典》辑出。《新五代史》是欧阳修晚年私撰，寄托其政治理想。他曾说："呜呼，五代之乱极矣！"对五代乱世深恶痛绝。
@@ -619,21 +552,17 @@ categories:
 
 **写作目的**：以元朝统一天下的立场，记录宋朝历史。
 
-### 风格特色
-- **卷帙浩繁**：二十四史中篇幅最大
-- **史料丰富**：以宋代国史、实录为基础
-- **志表完备**：《食货志》《职官志》《兵志》等价值极高
-
-### 优缺点
-**优点**：
-- 史料丰富，保存大量宋代文献
-- 志表完备，制度记载详实
-- 人物传记数量庞大
-
-**缺点**：
-- 编纂仓促，仅用两年半
-- 错误较多，考证不精
-- 文字繁冗，体例不统一
+### 特色与优劣
+□ 卷帙浩繁，二十四史中篇幅最大
+□ 以宋代国史、实录为基础
+□ 志表完备，《食货志》《职官志》《兵志》等
+□ 人物传记数量庞大
+□ 编纂仅用两年半
+● 史料丰富，保存大量宋代文献
+● 制度记载详实
+○ 编纂仓促
+○ 错误较多，考证不精
+○ 文字繁冗，体例不统一
 
 ### 背后的故事
 《宋史》编纂极为仓促，从开局到成书仅两年半时间。修史官员众多，体例难以统一，错误较多。但因保存了大量宋代国史、实录原文，史料价值仍不可替代。
@@ -651,30 +580,21 @@ categories:
 - **卷数**：《辽史》116卷，《金史》135卷
 - **记载范围**：辽（907-1125）、金（1115-1234）
 
-### 风格特色
-**《辽史》**：
-- 首创《营卫志》《部族表》，记录契丹制度
-- 史料相对匮乏，内容较简略
+### 《辽史》特色与优劣
+□ 首创《营卫志》《部族表》，记录契丹制度
+□ 史料相对匮乏
+● 保存契丹族重要史料
+● 《营卫志》《部族表》为研究契丹制度重要资料
+○ 内容简略
+○ 错误较多
 
-**《金史》**：
-- 史料丰富，叙事详赡
-- 编纂质量优于《辽史》《宋史》
-
-### 优缺点
-**《辽史》优点**：
-- 保存契丹族重要史料
-- 《营卫志》《部族表》为研究契丹制度重要资料
-
-**《辽史》缺点**：
-- 史料不足，内容简略
-- 错误较多
-
-**《金史》优点**：
-- 编纂质量较高
-- 史料丰富，叙事详赡
-
-**《金史》缺点**：
-- 部分内容有误
+### 《金史》特色与优劣
+□ 史料丰富
+□ 编纂质量优于《辽史》《宋史》
+□ 保存女真族重要史料
+● 编纂质量较高
+● 叙事详赡
+○ 部分内容有误
 
 ### 最佳校注版本
 - **学术版**：中华书局点校本，1974-1975年
@@ -694,20 +614,15 @@ categories:
 
 **写作目的**：以明朝取代元朝的立场，记录元朝历史。
 
-### 风格特色
-- **编纂仓促**：两次开局，总计不到一年
-- **史料来源**：以《元十三朝实录》《经世大典》为基础
-- **志书完备**：《地理志》《百官志》等价值较高
-
-### 优缺点
-**优点**：
-- 保存元代重要史料
-- 志书内容丰富
-
-**缺点**：
-- 编纂极为仓促，错误甚多
-- 蒙古史料不足
-- 重复、矛盾之处甚多
+### 特色与优劣
+□ 编纂仓促，两次开局，总计不到一年
+□ 以《元十三朝实录》《经世大典》为基础
+□ 志书完备，《地理志》《百官志》等
+● 保存元代重要史料
+● 志书内容丰富
+○ 错误甚多
+○ 蒙古史料不足
+○ 重复、矛盾之处甚多
 
 ### 背后的故事
 《元史》编纂极为仓促，第一次开局仅188天，第二次仅143天。因时间紧迫，来不及详细考证，错误甚多。清代学者钱大昕批评其"潦草塞责"，但因其保存了大量元代原始史料，价值仍不可替代。
@@ -730,21 +645,18 @@ categories:
 
 **写作目的**：以清朝取代明朝的立场，总结明朝兴亡教训。
 
-### 风格特色
-- **编纂精审**：历时最久，质量最高
-- **体例严谨**：仿《新唐书》，文字精炼
-- **志表完备**：《食货志》《职官志》《地理志》等价值极高
-
-### 优缺点
-**优点**：
-- 编纂质量为二十四史中最高
-- 史料丰富，考证精详
-- 文字精炼，叙事清晰
-- 志表完备，学术价值高
-
-**缺点**：
-- 对明朝有所贬低
-- 对建州女真历史多有隐讳
+### 特色与优劣
+□ 编纂精审，历时最久
+□ 体例严谨，仿《新唐书》
+□ 志表完备，《食货志》《职官志》《地理志》等
+□ 历经三朝，反复修订
+□ 万斯同以布衣身份参与修史，贡献最大
+● 编纂质量为二十四史中最高
+● 史料丰富，考证精详
+● 文字精炼，叙事清晰
+● 学术价值高
+○ 对明朝有所贬低
+○ 对建州女真历史多有隐讳
 
 ### 背后的故事
 《明史》编纂历时94年，是二十四史中编纂时间最长的。万斯同以布衣身份参与修史，贡献最大，却不愿列名。黄宗羲虽未直接参与，但其弟子多人参与修史，影响深远。
@@ -774,22 +686,19 @@ categories:
 - **以政治军事为主**：经济文化涉及较少
 - **考异精详**：对史料异同详加考证
 
-### 风格特色
-- **叙事生动**：文学价值高，叙事艺术精湛
-- **考异精详**：《通鉴考异》30卷，开史考先河
-- **史论深刻**：臣光曰评论精辟
-
-### 优缺点
-**优点**：
-- 编年体通史典范，叙事条理清晰
-- 史料丰富，考证精详
-- 文学价值高，叙事生动
-- 政治借鉴意义突出
-
-**缺点**：
-- 经济文化内容较少
-- 对农民起义评价偏低
-- 以政治军事为主，视野有所局限
+### 特色与优劣
+□ 编年体通史典范
+□ 叙事生动，文学价值高
+□ 《通鉴考异》30卷，开史考先河
+□ 史论深刻，臣光曰评论精辟
+□ 政治借鉴意义突出
+□ 助手有刘恕、刘攽、范祖禹等人
+● 叙事条理清晰
+● 史料丰富，考证精详
+● 叙事艺术精湛
+○ 经济文化内容较少
+○ 对农民起义评价偏低
+○ 以政治军事为主，视野有所局限
 
 ### 与二十四史的关系
 - **体例不同**：编年体vs纪传体
@@ -824,19 +733,15 @@ categories:
 
 **写作目的**：续《资治通鉴》，详记北宋历史，保存一代典章制度。
 
-### 风格特色
-- **史料详赡**：引用大量北宋实录、国史、档案
-- **考异精详**：对史料异同详加考证
-- **叙事详尽**：不厌其烦，保存大量原始文献
-
-### 优缺点
-**优点**：
-- 史料价值极高，保存大量北宋文献
-- 考证精详，可信度高
-
-**缺点**：
-- 原书有残缺
-- 过于详赡，不便阅读
+### 特色与优劣
+□ 引用大量北宋实录、国史、档案
+□ 考异精详
+□ 叙事详尽，不厌其烦
+□ 续《通鉴》之作，体例相同
+● 保存大量北宋文献，史料价值极高
+● 考证精详，可信度高
+○ 原书有残缺
+○ 过于详赡，不便阅读
 
 ### 与二十四史的关系
 - 与《宋史》互补，可补《宋史》之疏漏
@@ -864,20 +769,16 @@ categories:
 
 **写作目的**：通过评论历史，阐发政治哲学思想，总结历史规律。
 
-### 风格特色
-- **思想深刻**：见解独到，思想深邃
-- **文笔犀利**：议论风生，文笔雄健
-- **以史论政**：借古讽今，寄托政治理想
-
-### 优缺点
-**优点**：
-- 史论成就最高，思想深刻
-- 文笔雄健，可读性强
-- 政治哲学思想丰富
-
-**缺点**：
-- 偏重政治哲学，非纯粹史学著作
-- 部分观点有时代局限
+### 特色与优劣
+□ 思想深刻，见解独到
+□ 文笔犀利，议论风生
+□ 以史论政，借古讽今
+□ 明亡后隐居石船山，著述终身
+● 史论成就最高
+● 文笔雄健，可读性强
+● 政治哲学思想丰富
+○ 偏重政治哲学，非纯粹史学著作
+○ 部分观点有时代局限
 
 ### 与二十四史的关系
 - 以《通鉴》为基础，间接与正史相关
@@ -913,20 +814,16 @@ categories:
 - **分239事**：每事独立成篇
 - **开创新体例**：与编年体、纪传体鼎足而三
 
-### 风格特色
-- **以事为纲**：每事首尾完整，便于理解
-- **叙事连贯**：克服编年体叙事零散的缺点
-- **文字简洁**：删繁就简，可读性强
-
-### 优缺点
-**优点**：
-- 首创纪事本末体，贡献卓著
-- 便于把握历史事件全貌
-- 可读性强
-
-**缺点**：
-- 史料价值不及《通鉴》原文
-- 部分事件划分不够合理
+### 特色与优劣
+□ 以事为纲，每事首尾完整
+□ 叙事连贯，克服编年体叙事零散的缺点
+□ 文字简洁，删繁就简
+□ 首创纪事本末体，与编年体、纪传体鼎足而三
+● 便于把握历史事件全貌
+● 可读性强
+● 贡献卓著，开创史书新体例
+○ 史料价值不及《通鉴》原文
+○ 部分事件划分不够合理
 
 ### 与二十四史的关系
 - 以《通鉴》为基础，间接与正史相关
@@ -954,20 +851,16 @@ categories:
 
 **写作目的**：仿《通鉴纪事本末》体例，记录明朝重要史事。
 
-### 风格特色
-- **纪事本末体**：以事件为中心
-- **分80事**：每事独立成篇
-- **叙事详赡**：保存大量明史史料
-
-### 优缺点
-**优点**：
-- 保存大量明史史料
-- 叙事连贯，便于阅读
-- 成书早于《明史》，史料价值高
-
-**缺点**：
-- 部分内容有误
-- 作者立场有局限
+### 特色与优劣
+□ 纪事本末体，以事件为中心
+□ 分80事，每事独立成篇
+□ 叙事详赡
+□ 成书早于《明史》
+● 保存大量明史史料
+● 叙事连贯，便于阅读
+● 可补《明史》之不足
+○ 部分内容有误
+○ 作者立场有局限
 
 ### 与二十四史的关系
 - 与《明史》互补
@@ -995,20 +888,16 @@ categories:
 
 **写作目的**：为清朝修史，延续正史传统。
 
-### 风格特色
-- **体例仿《明史》**：纪传体
-- **内容丰富**：保存大量清史史料
-- **未定稿**：因时局动荡，未能定稿
-
-### 优缺点
-**优点**：
-- 保存大量清史史料
-- 体例完整，内容丰富
-
-**缺点**：
-- 未定稿，错误较多
-- 编纂者多为清朝遗老，立场保守
-- 对辛亥革命评价有失公允
+### 特色与优劣
+□ 体例仿《明史》，纪传体
+□ 内容丰富
+□ 未定稿，因时局动荡，未能定稿
+□ 编纂者多为清朝遗老
+● 保存大量清史史料
+● 体例完整
+○ 错误较多
+○ 立场保守
+○ 对辛亥革命评价有失公允
 
 ### 与二十四史的关系
 - 体例上延续正史传统
@@ -1041,20 +930,15 @@ categories:
 
 **写作目的**：补正《元史》之不足，利用新发现的蒙古史料重修元史。
 
-### 风格特色
-- **史料丰富**：利用《元朝秘史》等新史料
-- **考证精详**：纠正《元史》大量错误
-- **体例严谨**：仿《明史》，文字精炼
-
-### 优缺点
-**优点**：
-- 史料丰富，考证精详
-- 纠正《元史》大量错误
-- 利用蒙古史料，视野开阔
-
-**缺点**：
-- 部分内容有误
-- 未被列入正史
+### 特色与优劣
+□ 利用《元朝秘史》等新史料
+□ 考证精详
+□ 体例严谨，仿《明史》
+□ 利用蒙古史料，视野开阔
+● 纠正《元史》大量错误
+● 史料丰富
+○ 部分内容有误
+○ 未被列入正史
 
 ### 与二十四史的关系
 - 补正《元史》之作
@@ -1076,22 +960,18 @@ categories:
 ### 概述
 点校本二十四史是新中国成立后，由中华书局组织全国专家学者，历时20余年完成的重大文化工程。1959年《史记》点校本出版，1978年《清史稿》点校本出版，标志着这一工程基本完成。
 
-### 特点
-- **标点断句**：为古籍添加现代标点，便于阅读
-- **校勘记**：对版本异同详加考证，附校勘记
-- **学术标准**：代表当代古籍整理的最高水平
-- **集体成果**：顾颉刚、陈垣、陈直等著名学者参与
-
-### 优点
-- **权威性**：学术界公认的权威版本
-- **准确性**：校勘精详，错误较少
-- **实用性**：标点断句，便于阅读引用
-- **完整性**：附校勘记，便于深入研究
-
-### 缺点
-- **无注释**：仅有标点校勘，无白话翻译和注释
-- **专业性强**：需要一定古文功底
-- **价格较高**：全套价格不菲
+### 特色与优劣
+□ 标点断句，为古籍添加现代标点
+□ 校勘记，对版本异同详加考证
+□ 代表当代古籍整理的最高水平
+□ 顾颉刚、陈垣、陈直等著名学者参与
+● 学术界公认的权威版本
+● 校勘精详，错误较少
+● 标点断句，便于阅读引用
+● 附校勘记，便于深入研究
+○ 无白话翻译和注释
+○ 需要一定古文功底
+○ 全套价格不菲
 
 ### 适用人群
 - 专业研究者
@@ -1105,21 +985,17 @@ categories:
 ### 概述
 今注本二十四史是在点校本基础上，增加注释、白话翻译的版本。主要有"今注本二十四史"（中国社会科学出版社）和"白话二十四史"等版本。
 
-### 特点
-- **注释详尽**：对难解字词、典章制度、人物地名等详加注释
-- **白话翻译**：部分版本附白话翻译
-- **便于入门**：降低阅读门槛
-- **普及性强**：面向普通读者
-
-### 优点
-- **便于理解**：注释帮助理解原文
-- **入门友好**：适合初学者
-- **普及性强**：推广传统文化
-
-### 缺点
-- **注释质量参差**：不同版本质量不一
-- **篇幅庞大**：增加注释后篇幅更大
-- **学术性较弱**：不如点校本权威
+### 特色与优劣
+□ 注释详尽，对难解字词、典章制度、人物地名等详加注释
+□ 部分版本附白话翻译
+□ 降低阅读门槛
+□ 面向普通读者
+● 便于理解，注释帮助理解原文
+● 适合初学者
+● 推广传统文化
+○ 注释质量参差，不同版本质量不一
+○ 增加注释后篇幅更大
+○ 不如点校本权威
 
 ### 适用人群
 - 初学者
